runit 1.0.5
Mon, 20 Sep 2004 20:12:14 +0000
  * svlogd.c: fix line buffer handling for pattern matching (thx Enrico
    Scholz); minor bug fixes.
  * doc/index.html: wording; add link to useinit.html; remove link to runit
    on LinuxFromScratch.
  * doc/runscripts.html: add hint, some getties need to be run in a new
    session/process group (thx Dan Melomedman).
  * man/svlogd.8: minor fixes.
  * man/svwaitdown.8: remove hint about -x option.
  * package/check, package/compile, package/install, package/install-man,
    package/upgrade: use set -e instead of #!/bin/sh -e.

runit 1.0.4
Sun, 01 Aug 2004 18:29:36 +0000
  * doc/runlevels.html, doc/upgrade.html, doc/useinit.html, man/runsvdir.8,
    man/runsvchdir.8: minor changes in wording, notations.
  * runsvdir.c: check services dir again after one second until it's
    unchanged (thx Eric Lammerts); sleep one second before scanning if
    services dir mtime is now; loop while chdir to starting dir fails;
    rename log, loglen to rplog, rploglen.
  * etc/macosx/StartupItems/runit: use -x option to svwaitdown; timeout 14.

runit 1.0.3
Sat, 26 Jun 2004 14:50:41 +0000
  * chpst.c, man/chpst.8: new option -/ chroot.
  * runit.c, man/runit.8: if stage 1 crashes or exits 100, stage 2 will be
    skipped; if stage 2 crashes or exits 111, it will be restarted.
  * package/check, package/compile, package/install-man, package/upgrade:
    minor cleanup.
  * doc/runscripts.html: add, adapt various run scripts (thx).

runit 1.0.2
Mon, 29 Mar 2004 17:52:50 +0000
  * man/svlogd.8: timestamps are not considered when matching patterns (thx
    Andras KORN).
  * runsv.c: on exit run the finish scripts when taking the service down
    (thx X.).
  * runsv.c, runsvctrl.c: handle sig_quit (thx Wayne Marshall).
  * svlogd.c: don't crash on zero byte long config file (thx Alex Efros).
  * man/*: minor cleanup.
  * doc/index.html: add link to runit on linuxfromscratch doc (thx Richard
    A Downing FBCS).

runit 1.0.1